--- a/12bool.css
+++ b/12bool.css
@@ -1,346 +1,287 @@
-/*12BOOL FRAMEWORK  */
+/* framework griglia a 12 colonne */
 
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
+/* regole di contenitore */
 .container{
   max-width: 1170px;
   margin: 0 auto;
 }
 
-/*CLEAR*/
-
-.row::after{
-  clear: both;
-  content: '';
+.container::after {
+  content: "";
   display: table;
+  clear: both;
 }
-/* COLONNE FRAMEWORK */
 
-[class*='col-']{
+.clear-xs, .clear-md, .clear-lg  {
+  clear: both;
+  display: none;
+}
+
+/* regole di colonne */
+
+[class*="col-"] {
   float: left;
 }
 
-/*versione desktop*/
-@media all and (min-width: 992px){
+/* versione mobile xs */
+@media screen and (max-width:768px){
 
-  .col-lg-1{
-    width: calc((100% / 12) * 1);
+  .clear-xs  {
+    display: block;
   }
 
-  .col-lg-2{
-    width: calc((100% / 12) * 2);
+  .col-xs-1 {
+      width: calc(( 100% / 12)*1);
+  }
+  .col-xs-2 {
+      width: calc(( 100% / 12)*2);
+  }
+  .col-xs-3 {
+      width: calc(( 100% / 12)*3);
+  }
+  .col-xs-4 {
+      /*width: 33.33%;*/
+      /* width: calc( 100% / 3); */
+      width: calc(( 100% / 12)*4);
+  }
+  .col-xs-5 {
+      width: calc(( 100% / 12)*5);
+  }
+  .col-xs-6 {
+      width: calc(( 100% / 12)*6);
+  }
+  .col-xs-7 {
+      width: calc(( 100% / 12)*7);
+  }
+  .col-xs-8 {
+      width: calc(( 100% / 12)*8);
+  }
+  .col-xs-9 {
+      width: calc(( 100% / 12)*9);
+  }
+  .col-xs-10 {
+      width: calc(( 100% / 12)*10);
+  }
+  .col-xs-11 {
+      width: calc(( 100% / 12)*11);
+  }
+  .col-xs-12 {
+      width: calc(( 100% / 12)*12);
   }
 
-  .col-lg-3{
-    width: calc((100% / 12) * 3);
-  }
+  /* regole di ofgfset */
 
-  .col-lg-4{
-    width: calc((100% / 12) * 4);
-  }
-
-  .col-lg-5{
-    width: calc((100% / 12) * 5);
-  }
-
-  .col-lg-6{
-    width: 50%;
-  }
-
-  .col-lg-7{
-    width: calc((100% / 12) * 7);
-  }
-
-  .col-lg-8{
-    width: calc((100% / 12) * 8);
-  }
-
-  .col-lg-9{
-    width: calc((100% / 12) * 9);
-  }
-
-  .col-lg-10{
-    width: calc((100% / 12) * 10);
-  }
-
-  .col-lg-11{
-    width: calc((100% / 12) * 11);
-  }
-
-  .col-lg-12{
-    width: 100%;
-  }
-
-  /* OFFSET */
-
-  .col-lg-offset-0{
-    margin-left: 0;
-  }
-
-  .col-lg-offset-1{
+  .col-xs-offset-1 {
     margin-left: calc((100% / 12) * 1);
   }
-
-  .col-lg-offset-2{
+  .col-xs-offset-2 {
     margin-left: calc((100% / 12) * 2);
   }
-
-  .col-lg-offset-3{
+  .col-xs-offset-3 {
     margin-left: calc((100% / 12) * 3);
   }
-
-  .col-lg-offset-4{
+  .col-xs-offset-4 {
     margin-left: calc((100% / 12) * 4);
   }
-
-  .col-lg-offset-5{
+  .col-xs-offset-5 {
     margin-left: calc((100% / 12) * 5);
   }
-
-  .col-lg-offset-6{
-    margin-left: 50%;
+  .col-xs-offset-6 {
+    margin-left: calc((100% / 12) * 6);
   }
-
-  .col-lg-offset-7{
+  .col-xs-offset-7 {
     margin-left: calc((100% / 12) * 7);
   }
-
-  .col-lg-offset-8{
+  .col-xs-offset-8 {
     margin-left: calc((100% / 12) * 8);
   }
-
-  .col-lg-offset-9{
+  .col-xs-offset-9 {
     margin-left: calc((100% / 12) * 9);
   }
-
-  .col-lg-offset-10{
+  .col-xs-offset-10 {
     margin-left: calc((100% / 12) * 10);
   }
-
-  .col-lg-offset-11{
+  .col-xs-offset-11 {
     margin-left: calc((100% / 12) * 11);
   }
-
-  .col-lg-offset-12{
-    margin-left: 100%;
+  .col-xs-offset-12 {
+    margin-left: calc((100% / 12) * 12);
   }
+
 }
 
 
-/*tablet version */
+/* versione tablet md */
+@media screen and (min-width:769px) and (max-width:992px){
 
-@media all and (min-width: 769px) and (max-width: 991px) {
-
-  .col-md-1{
-    width: calc((100% / 12) * 1);
+  .clear-md  {
+    display: block;
   }
 
-  .col-md-2{
-    width: calc((100% / 12) * 2);
+  .col-md-1 {
+      width: calc(( 100% / 12)*1);
+  }
+  .col-md-2 {
+      width: calc(( 100% / 12)*2);
+  }
+  .col-md-3 {
+      width: calc(( 100% / 12)*3);
+  }
+  .col-md-4 {
+      /*width: 33.33%;*/
+      /* width: calc( 100% / 3); */
+      width: calc(( 100% / 12)*4);
+  }
+  .col-md-5 {
+      width: calc(( 100% / 12)*5);
+  }
+  .col-md-6 {
+      width: calc(( 100% / 12)*6);
+  }
+  .col-md-7 {
+      width: calc(( 100% / 12)*7);
+  }
+  .col-md-8 {
+      width: calc(( 100% / 12)*8);
+  }
+  .col-md-9 {
+      width: calc(( 100% / 12)*9);
+  }
+  .col-md-10 {
+      width: calc(( 100% / 12)*10);
+  }
+  .col-md-11 {
+      width: calc(( 100% / 12)*11);
+  }
+  .col-md-12 {
+      width: calc(( 100% / 12)*12);
   }
 
-  .col-md-3{
-    width: calc((100% / 12) * 3);
-  }
+  /* regole di ofgfset */
 
-  .col-md-4{
-    width: calc((100% / 12) * 4);
-  }
-
-  .col-md-5{
-    width: calc((100% / 12) * 5);
-  }
-
-  .col-md-6{
-    width: 50%;
-  }
-
-  .col-md-7{
-    width: calc((100% / 12) * 7);
-  }
-
-  .col-md-8{
-    width: calc((100% / 12) * 8);
-  }
-
-  .col-md-9{
-    width: calc((100% / 12) * 9);
-  }
-
-  .col-md-10{
-    width: calc((100% / 12) * 10);
-  }
-
-  .col-md-11{
-    width: calc((100% / 12) * 11);
-  }
-
-  .col-md-12{
-    width: 100%;
-  }
-
-  /* OFFSET */
-
-  .col-md-offset-0{
-    margin-left: 0;
-  }
-  .col-md-offset-1{
+  .col-md-offset-1 {
     margin-left: calc((100% / 12) * 1);
   }
-
-  .col-md-offset-2{
+  .col-md-offset-2 {
     margin-left: calc((100% / 12) * 2);
   }
-
-  .col-md-offset-3{
+  .col-md-offset-3 {
     margin-left: calc((100% / 12) * 3);
   }
-
-  .col-md-offset-4{
+  .col-md-offset-4 {
     margin-left: calc((100% / 12) * 4);
   }
-
-  .col-md-offset-5{
+  .col-md-offset-5 {
     margin-left: calc((100% / 12) * 5);
   }
-
-  .col-md-offset-6{
-    margin-left: 50%;
+  .col-md-offset-6 {
+    margin-left: calc((100% / 12) * 6);
   }
-
-  .col-md-offset-7{
+  .col-md-offset-7 {
     margin-left: calc((100% / 12) * 7);
   }
-
-  .col-md-offset-8{
+  .col-md-offset-8 {
     margin-left: calc((100% / 12) * 8);
   }
-
-  .col-md-offset-9{
+  .col-md-offset-9 {
     margin-left: calc((100% / 12) * 9);
   }
-
-  .col-md-offset-10{
+  .col-md-offset-10 {
     margin-left: calc((100% / 12) * 10);
   }
-
-  .col-md-offset-11{
+  .col-md-offset-11 {
     margin-left: calc((100% / 12) * 11);
   }
-
-  .col-md-offset-12{
-    margin-left: 100%;
+  .col-md-offset-12 {
+    margin-left: calc((100% / 12) * 12);
   }
+
 }
 
 
-/*mobile version*/
-@media all and (max-width: 768px){
+/* versione dekstop lg */
+@media screen and (min-width:993px){
 
-  .col-xs-1{
-    width: calc((100% / 12) * 1);
+  .clear-lg  {
+    display: block;
   }
 
-  .col-xs-2{
-    width: calc((100% / 12) * 2);
+  .col-lg-1 {
+      width: calc(( 100% / 12)*1);
+  }
+  .col-lg-2 {
+      width: calc(( 100% / 12)*2);
+  }
+  .col-lg-3 {
+      width: calc(( 100% / 12)*3);
+  }
+  .col-lg-4 {
+      /*width: 33.33%;*/
+      /* width: calc( 100% / 3); */
+      width: calc(( 100% / 12)*4);
+  }
+  .col-lg-5 {
+      width: calc(( 100% / 12)*5);
+  }
+  .col-lg-6 {
+      width: calc(( 100% / 12)*6);
+  }
+  .col-lg-7 {
+      width: calc(( 100% / 12)*7);
+  }
+  .col-lg-8 {
+      width: calc(( 100% / 12)*8);
+  }
+  .col-lg-9 {
+      width: calc(( 100% / 12)*9);
+  }
+  .col-lg-10 {
+      width: calc(( 100% / 12)*10);
+  }
+  .col-lg-11 {
+      width: calc(( 100% / 12)*11);
+  }
+  .col-lg-12 {
+      width: calc(( 100% / 12)*12);
   }
 
-  .col-xs-3{
-    width: calc((100% / 12) * 3);
-  }
+  /* regole di ofgfset */
 
-  .col-xs-4{
-    width: calc((100% / 12) * 4);
-  }
-
-  .col-xs-5{
-    width: calc((100% / 12) * 5);
-  }
-
-  .col-xs-6{
-    width: 50%;
-  }
-
-  .col-xs-7{
-    width: calc((100% / 12) * 7);
-  }
-
-  .col-xs-8{
-    width: calc((100% / 12) * 8);
-  }
-
-  .col-xs-9{
-    width: calc((100% / 12) * 9);
-  }
-
-  .col-xs-10{
-    width: calc((100% / 12) * 10);
-  }
-
-  .col-xs-11{
-    width: calc((100% / 12) * 11);
-  }
-
-  .col-xs-12{
-    width: 100%;
-  }
-
-  /* OFFSET */
-
-  .col-xs-offset-0{
-    margin-left: 0;
-  }
-
-  .col-xs-offset-1{
+  .col-lg-offset-1 {
     margin-left: calc((100% / 12) * 1);
   }
-
-  .col-xs-offset-2{
+  .col-lg-offset-2 {
     margin-left: calc((100% / 12) * 2);
   }
-
-  .col-xs-offset-3{
+  .col-lg-offset-3 {
     margin-left: calc((100% / 12) * 3);
   }
-
-  .col-xs-offset-4{
+  .col-lg-offset-4 {
     margin-left: calc((100% / 12) * 4);
   }
-
-  .col-xs-offset-5{
+  .col-lg-offset-5 {
     margin-left: calc((100% / 12) * 5);
   }
-
-  .col-xs-offset-6{
-    margin-left: 50%;
+  .col-lg-offset-6 {
+    margin-left: calc((100% / 12) * 6);
   }
-
-  .col-xs-offset-7{
+  .col-lg-offset-7 {
     margin-left: calc((100% / 12) * 7);
   }
-
-  .col-xs-offset-8{
+  .col-lg-offset-8 {
     margin-left: calc((100% / 12) * 8);
   }
-
-  .col-xs-offset-9{
+  .col-lg-offset-9 {
     margin-left: calc((100% / 12) * 9);
   }
-
-  .col-xs-offset-10{
+  .col-lg-offset-10 {
     margin-left: calc((100% / 12) * 10);
   }
-
-  .col-xs-offset-11{
+  .col-lg-offset-11 {
     margin-left: calc((100% / 12) * 11);
   }
-
-  .col-xs-offset-12{
-    margin-left: 100%;
+  .col-lg-offset-12 {
+    margin-left: calc((100% / 12) * 12);
   }
 
 }
