--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 /* debug */
 
 .container{
-  background-color: pink;
+  text-align: center;
+  margin-top: 3%;
 }
+
 
 [class*='col-']{
-  height: 100px;
-  border: 1px solid black;
+  height: auto;
 }
 
-.cambio{
-  background-color: orange;
-}
 
-.cambio [class*='col-']{
-  border-color: white;
+
+img{
+  height: 200px;
+  background-color: lightblue;
+  border-radius: 20%;
+}
+.row img {
+  padding:30px;
 }
